add userstamps
