# internal/handler/request/auth.go
@@ -1,0 +1,13 @@
+package request
+
+type RegisterRequest struct {
+	Name     string `json:"name" binding:"required,min=2,max=100"`
+	Email    string `json:"email" binding:"required,email,max=190"`
+	Password string `json:"password" binding:"required,min=8,max=72"`
+}
+
+type LoginRequest struct {
+	Email    string `json:"email" binding:"required,email,max=190"`
+	Password string `json:"password" binding:"required,min=8,max=72"`
+}
+
