# internal/handler/request/comment.go
@@ -1,0 +1,6 @@
+package request
+
+type CreateCommentRequest struct {
+	Content string `json:"content" binding:"required,min=1,max=2000"`
+}
+
